# Exam-project

./: Activity.cpp  Activity.h  ActivityAdderView.cpp  ActivityAdderView.h  ActivityBluePrint.cpp  ActivityBluePrint.h  CMakeLists.txt  Category.cpp  Category.h  CategoryAdder.h  CategoryAdderController.cpp  CategoryAdderController.h  CategoryAdderView.cpp  CategoryAdderView.h  CategoryView.cpp  CategoryView.h  Chart.cpp  Chart.h  ChartObserverInterface.h  Colors.cpp  Colors.h  ControllerMain.cpp  ControllerMain.h  EntryAdderView.cpp  EntryAdderView.h  EntryObserverInterface.h  EntryViewerView.cpp  EntryViewerView.h  ListObserverInterface.h  MainWindow.cpp  MainWindow.h  ModelMain.cpp  ModelMain.h  Observer.h  Subject.h  Ui_ActivityAdderView.h  Ui_CategoryAdderView.h  Ui_EntryAdderView.h  Ui_EntryViewer.h  Ui_MainWindow.h  (+7 more)
test/: ActivityBluePrintFixture.cpp  ActivityBluePrintTest.cpp  ActivityTest.cpp  CategoryTest.cpp  CategoryTestFixture.cpp  ControllerTest.cpp  ModelMainFixture.cpp  runAllTests.cpp
